--- a/Aier360/Controllers/校园/School.storyboard
+++ b/Aier360/Controllers/校园/School.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="XgD-dd-ezr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="XgD-dd-ezr">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -44,13 +44,13 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Glx-0h-4yk">
                                     <size key="itemSize" width="100" height="100"/>
-                                    <size key="headerReferenceSize" width="50" height="215"/>
+                                    <size key="headerReferenceSize" width="50" height="223"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ZXSchoolMenuCollectionViewCell" id="4G5-UH-9l7" customClass="ZXSchoolMenuCollectionViewCell">
-                                        <rect key="frame" x="0.0" y="215" width="100" height="100"/>
+                                        <rect key="frame" x="0.0" y="223" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -93,6 +93,13 @@
                                                         <constraint firstAttribute="width" constant="1" id="KnV-5C-vF4"/>
                                                     </constraints>
                                                 </view>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="message_account_tip" translatesAutoresizingMaskIntoConstraints="NO" id="P9Y-xR-Dsm">
+                                                    <rect key="frame" x="70" y="0.0" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="Pk9-VE-JxA"/>
+                                                        <constraint firstAttribute="height" constant="30" id="opT-vq-Hsz"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
@@ -101,11 +108,13 @@
                                             <constraint firstItem="H4M-U9-7vn" firstAttribute="top" secondItem="4G5-UH-9l7" secondAttribute="top" id="2Kd-6B-Iuz"/>
                                             <constraint firstItem="GQC-FN-jBF" firstAttribute="top" secondItem="Wtm-RP-gIA" secondAttribute="bottom" constant="10" id="6pY-qc-p7t"/>
                                             <constraint firstItem="GTz-hW-oeZ" firstAttribute="trailing" secondItem="Wtm-RP-gIA" secondAttribute="trailing" id="Lgh-9B-Ktb"/>
+                                            <constraint firstItem="P9Y-xR-Dsm" firstAttribute="top" secondItem="4G5-UH-9l7" secondAttribute="top" id="R1e-z7-waU"/>
                                             <constraint firstItem="H4M-U9-7vn" firstAttribute="leading" secondItem="GQC-FN-jBF" secondAttribute="trailing" constant="5" id="UWN-wH-6NU"/>
                                             <constraint firstAttribute="bottom" secondItem="GQC-FN-jBF" secondAttribute="bottom" constant="27" id="Wyt-UG-ehH"/>
                                             <constraint firstItem="GQC-FN-jBF" firstAttribute="leading" secondItem="4G5-UH-9l7" secondAttribute="leading" constant="5" id="c3P-59-SMG"/>
                                             <constraint firstItem="0eF-rK-mbQ" firstAttribute="top" secondItem="H4M-U9-7vn" secondAttribute="bottom" id="ey6-Im-Orp"/>
                                             <constraint firstAttribute="trailing" secondItem="H4M-U9-7vn" secondAttribute="trailing" id="gXB-K3-Y0x"/>
+                                            <constraint firstAttribute="trailing" secondItem="P9Y-xR-Dsm" secondAttribute="trailing" id="ge3-ak-kwA"/>
                                             <constraint firstAttribute="centerX" secondItem="Wtm-RP-gIA" secondAttribute="centerX" id="hS9-DK-q4I"/>
                                             <constraint firstItem="0eF-rK-mbQ" firstAttribute="leading" secondItem="4G5-UH-9l7" secondAttribute="leading" id="iDp-6c-p7L"/>
                                             <constraint firstItem="GTz-hW-oeZ" firstAttribute="top" secondItem="Wtm-RP-gIA" secondAttribute="top" id="uNF-49-SUs"/>
@@ -116,17 +125,18 @@
                                             <outlet property="badgeView" destination="GTz-hW-oeZ" id="bvb-Rf-bca"/>
                                             <outlet property="horizonLine" destination="0eF-rK-mbQ" id="a5F-tT-UYG"/>
                                             <outlet property="iconImage" destination="Wtm-RP-gIA" id="ObJ-Gr-vtJ"/>
+                                            <outlet property="messageAccountTip" destination="P9Y-xR-Dsm" id="hMX-zF-hWx"/>
                                             <outlet property="nameLabel" destination="GQC-FN-jBF" id="aGh-Gm-ri4"/>
                                             <outlet property="virticalLine" destination="H4M-U9-7vn" id="xwg-EQ-Ygj"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ZXSchoolMenuCollectionReusableView" id="7aj-0n-8aX" customClass="ZXSchoolMenuCollectionReusableView">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="215"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="223"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZLn-f9-VOv">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="215"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="223"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="LLh-gY-YmR">
                                                     <rect key="frame" x="0.0" y="0.0" width="600" height="215"/>
@@ -153,13 +163,13 @@
                                                     </state>
                                                 </button>
                                             </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="JFc-x3-7SJ" secondAttribute="bottom" constant="15" id="1YO-3M-Gdg"/>
+                                                <constraint firstAttribute="bottom" secondItem="JFc-x3-7SJ" secondAttribute="bottom" constant="23" id="1YO-3M-Gdg"/>
                                                 <constraint firstAttribute="trailing" secondItem="LLh-gY-YmR" secondAttribute="trailing" id="M9Y-Eh-nuA"/>
-                                                <constraint firstAttribute="bottom" secondItem="g3q-0z-F1u" secondAttribute="bottom" constant="12" id="NXQ-Uw-ztj"/>
+                                                <constraint firstAttribute="bottom" secondItem="g3q-0z-F1u" secondAttribute="bottom" constant="20" id="NXQ-Uw-ztj"/>
                                                 <constraint firstItem="LLh-gY-YmR" firstAttribute="leading" secondItem="ZLn-f9-VOv" secondAttribute="leading" id="XlJ-z1-Qga"/>
-                                                <constraint firstAttribute="bottom" secondItem="LLh-gY-YmR" secondAttribute="bottom" id="b6c-ak-Zbi"/>
+                                                <constraint firstAttribute="bottom" secondItem="LLh-gY-YmR" secondAttribute="bottom" constant="8" id="b6c-ak-Zbi"/>
                                                 <constraint firstItem="JFc-x3-7SJ" firstAttribute="leading" secondItem="ZLn-f9-VOv" secondAttribute="leading" constant="15" id="fGT-J3-C2n"/>
                                                 <constraint firstAttribute="trailing" secondItem="g3q-0z-F1u" secondAttribute="trailing" constant="15" id="gkV-V4-Njy"/>
                                                 <constraint firstItem="g3q-0z-F1u" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="JFc-x3-7SJ" secondAttribute="trailing" constant="8" id="ijm-yj-qQl"/>
@@ -481,6 +491,7 @@
     </scenes>
     <resources>
         <image name="item_selected" width="12" height="12"/>
+        <image name="message_account_tip" width="30" height="30"/>
         <image name="placeholder" width="75" height="75"/>
         <image name="school_bt_img" width="64" height="23"/>
         <image name="school_ic_tp" width="15" height="15"/>
