--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IJl-U0-2s7">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
@@ -756,6 +756,105 @@
             </objects>
             <point key="canvasLocation" x="1887" y="410"/>
         </scene>
+        <!--Add Announcement Success View Controller-->
+        <scene sceneID="9Mc-zZ-RxE">
+            <objects>
+                <viewController storyboardIdentifier="ZXAddAnnouncementSuccessViewController" id="rzg-sH-keH" customClass="ZXAddAnnouncementSuccessViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hqE-3R-hvZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="QHi-uo-Roe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MOe-GZ-Jqo">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j4t-4U-wE1">
+                                <rect key="frame" x="0.0" y="220" width="600" height="380"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vyp-i5-Uc7">
+                                        <rect key="frame" x="280" y="73" width="40" height="20"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C3R-vq-c4d">
+                                        <rect key="frame" x="200" y="113" width="200" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" title="我要发短信" backgroundImage="login_bt_login"/>
+                                        <connections>
+                                            <action selector="sendMessageAction:" destination="rzg-sH-keH" eventType="touchUpInside" id="Zxn-aL-QOd"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vyp-i5-Uc7" secondAttribute="trailing" constant="25" id="477-ee-hnL"/>
+                                    <constraint firstItem="C3R-vq-c4d" firstAttribute="centerX" secondItem="j4t-4U-wE1" secondAttribute="centerX" id="PDr-ve-LIj"/>
+                                    <constraint firstItem="vyp-i5-Uc7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="j4t-4U-wE1" secondAttribute="leading" constant="25" id="RYF-Mm-lI1"/>
+                                    <constraint firstItem="vyp-i5-Uc7" firstAttribute="top" secondItem="j4t-4U-wE1" secondAttribute="top" constant="70" id="ahh-yE-1Wq"/>
+                                    <constraint firstItem="vyp-i5-Uc7" firstAttribute="centerX" secondItem="j4t-4U-wE1" secondAttribute="centerX" id="ced-hT-FgQ"/>
+                                    <constraint firstItem="C3R-vq-c4d" firstAttribute="top" secondItem="vyp-i5-Uc7" secondAttribute="bottom" constant="30" id="dRK-68-Nld"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nrv-Y8-w1x">
+                                <rect key="frame" x="15" y="35" width="25" height="25"/>
+                                <state key="normal" image="announcement_bt_back"/>
+                                <connections>
+                                    <action selector="backAction:" destination="rzg-sH-keH" eventType="touchUpInside" id="THZ-jn-NTJ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="通知发布成功" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5A-Ij-vh5">
+                                <rect key="frame" x="249" y="152" width="102" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.62745098039215685" green="0.62352941176470589" blue="0.62352941176470589" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0zN-NL-hsz" customClass="BEMCheckBox">
+                                <rect key="frame" x="275" y="93" width="51" height="51"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="2HW-9g-GEg"/>
+                                    <constraint firstAttribute="width" constant="51" id="idh-eP-dKw"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="lineWidth">
+                                        <real key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="animationDuration">
+                                        <real key="value" value="0.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="onTintColor">
+                                        <color key="value" red="0.83529411760000005" green="0.4431372549" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="onCheckColor">
+                                        <color key="value" red="0.83529411760000005" green="0.4431372549" blue="0.070588235289999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="c5A-Ij-vh5" firstAttribute="top" secondItem="0zN-NL-hsz" secondAttribute="bottom" constant="10" id="3Cc-cj-1nS"/>
+                            <constraint firstItem="j4t-4U-wE1" firstAttribute="top" secondItem="c5A-Ij-vh5" secondAttribute="bottom" constant="47" id="DYa-qy-lIe"/>
+                            <constraint firstItem="c5A-Ij-vh5" firstAttribute="centerX" secondItem="MOe-GZ-Jqo" secondAttribute="centerX" id="JXJ-ia-LJH"/>
+                            <constraint firstAttribute="trailing" secondItem="j4t-4U-wE1" secondAttribute="trailing" id="R2O-Gi-93T"/>
+                            <constraint firstItem="nrv-Y8-w1x" firstAttribute="top" secondItem="hqE-3R-hvZ" secondAttribute="bottom" constant="15" id="SuV-EN-a2z"/>
+                            <constraint firstItem="QHi-uo-Roe" firstAttribute="top" secondItem="j4t-4U-wE1" secondAttribute="bottom" id="WKx-CT-IiW"/>
+                            <constraint firstItem="j4t-4U-wE1" firstAttribute="top" secondItem="hqE-3R-hvZ" secondAttribute="bottom" constant="200" id="cCj-tz-PaH"/>
+                            <constraint firstItem="j4t-4U-wE1" firstAttribute="leading" secondItem="MOe-GZ-Jqo" secondAttribute="leading" id="ghq-ek-Zlg"/>
+                            <constraint firstItem="nrv-Y8-w1x" firstAttribute="leading" secondItem="MOe-GZ-Jqo" secondAttribute="leading" constant="15" id="jmK-6h-EuA"/>
+                            <constraint firstItem="0zN-NL-hsz" firstAttribute="centerX" secondItem="MOe-GZ-Jqo" secondAttribute="centerX" id="ypX-kX-5d4"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="checkBox" destination="0zN-NL-hsz" id="BwL-Z6-Sux"/>
+                        <outlet property="tipLabel" destination="vyp-i5-Uc7" id="rou-wP-fdS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eBx-MZ-Ggc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2531" y="408"/>
+        </scene>
         <!--Announcement Type View Controller-->
         <scene sceneID="oNV-3N-wyk">
             <objects>
@@ -969,6 +1068,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="announcement_bt_back" width="25" height="25"/>
         <image name="announcement_ic_allreading" width="60" height="60"/>
         <image name="announcement_ic_time" width="12" height="12"/>
         <image name="announcement_progress_track" width="116" height="13"/>
@@ -977,5 +1077,6 @@
         <image name="announcement_teacherpick_select" width="11" height="11"/>
         <image name="contact_female" width="16" height="18"/>
         <image name="dynamic_ic_faved" width="19" height="17"/>
+        <image name="login_bt_login" width="306" height="36"/>
     </resources>
 </document>
