--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -855,6 +855,119 @@
             </objects>
             <point key="canvasLocation" x="2531" y="408"/>
         </scene>
+        <!--Message Edit View Controller-->
+        <scene sceneID="rJ6-Zk-2gX">
+            <objects>
+                <viewController storyboardIdentifier="ZXMessageEditViewController" id="MXu-uf-FNm" customClass="ZXMessageEditViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="TU0-bO-r9F"/>
+                        <viewControllerLayoutGuide type="bottom" id="oU7-XN-tXv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="GlF-Vt-7jW">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Llh-SM-oHz">
+                                <rect key="frame" x="0.0" y="20" width="600" height="175"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="RYa-wU-Q6L">
+                                        <rect key="frame" x="10" y="17" width="580" height="124"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="MXu-uf-FNm" id="v8q-Nv-4oJ"/>
+                                        </connections>
+                                    </textView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JMu-4T-ctn">
+                                        <rect key="frame" x="552" y="145" width="33" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" red="0.62745098039215685" green="0.62352941176470589" blue="0.62352941176470589" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="RYa-wU-Q6L" firstAttribute="leading" secondItem="Llh-SM-oHz" secondAttribute="leading" constant="10" id="0vB-TB-xYS"/>
+                                    <constraint firstAttribute="trailing" secondItem="RYa-wU-Q6L" secondAttribute="trailing" constant="10" id="MeO-yM-W9i"/>
+                                    <constraint firstItem="RYa-wU-Q6L" firstAttribute="top" secondItem="Llh-SM-oHz" secondAttribute="top" constant="17" id="N6f-II-IFs"/>
+                                    <constraint firstAttribute="bottom" secondItem="JMu-4T-ctn" secondAttribute="bottom" constant="14" id="O8T-uV-hRm"/>
+                                    <constraint firstAttribute="bottom" secondItem="RYa-wU-Q6L" secondAttribute="bottom" constant="34" id="W5D-5q-uhH"/>
+                                    <constraint firstAttribute="height" constant="175" id="aGe-08-NCy"/>
+                                    <constraint firstAttribute="trailing" secondItem="JMu-4T-ctn" secondAttribute="trailing" constant="15" id="qel-az-tDQ"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前通知短信需每人发送" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EB0-4t-vbG">
+                                <rect key="frame" x="15" y="203" width="143" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.62745098040000002" green="0.62352941179999999" blue="0.62352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="announcement_ic_number" translatesAutoresizingMaskIntoConstraints="NO" id="tPI-y5-avO">
+                                <rect key="frame" x="163" y="203" width="16" height="16"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbN-5U-dyO">
+                                <rect key="frame" x="163" y="203" width="16" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="c8n-Yd-7DG"/>
+                                    <constraint firstAttribute="width" constant="16" id="tdK-M9-lr7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="条" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P7O-JO-jtV">
+                                <rect key="frame" x="184" y="203" width="13" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.62745098040000002" green="0.62352941179999999" blue="0.62352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Llh-SM-oHz" firstAttribute="top" secondItem="TU0-bO-r9F" secondAttribute="bottom" id="22P-wm-1gV"/>
+                            <constraint firstItem="EB0-4t-vbG" firstAttribute="leading" secondItem="GlF-Vt-7jW" secondAttribute="leading" constant="15" id="30k-ms-HsE"/>
+                            <constraint firstItem="P7O-JO-jtV" firstAttribute="leading" secondItem="hbN-5U-dyO" secondAttribute="trailing" constant="5" id="3HW-Ex-FJ2"/>
+                            <constraint firstAttribute="trailing" secondItem="Llh-SM-oHz" secondAttribute="trailing" id="COQ-OF-ZCj"/>
+                            <constraint firstItem="hbN-5U-dyO" firstAttribute="centerY" secondItem="EB0-4t-vbG" secondAttribute="centerY" id="UXO-ew-na6"/>
+                            <constraint firstItem="hbN-5U-dyO" firstAttribute="leading" secondItem="EB0-4t-vbG" secondAttribute="trailing" constant="5" id="hii-fb-SKW"/>
+                            <constraint firstItem="tPI-y5-avO" firstAttribute="centerY" secondItem="EB0-4t-vbG" secondAttribute="centerY" id="iO9-Jc-MqE"/>
+                            <constraint firstItem="tPI-y5-avO" firstAttribute="leading" secondItem="EB0-4t-vbG" secondAttribute="trailing" constant="5" id="iia-hA-BRZ"/>
+                            <constraint firstItem="Llh-SM-oHz" firstAttribute="leading" secondItem="GlF-Vt-7jW" secondAttribute="leading" id="ogD-GW-udU"/>
+                            <constraint firstItem="P7O-JO-jtV" firstAttribute="centerY" secondItem="EB0-4t-vbG" secondAttribute="centerY" id="pDG-Ou-wgP"/>
+                            <constraint firstItem="EB0-4t-vbG" firstAttribute="top" secondItem="Llh-SM-oHz" secondAttribute="bottom" constant="8" id="rRs-2t-6Kl"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="letterNumLabel" destination="JMu-4T-ctn" id="ldq-Ub-Ass"/>
+                        <outlet property="messageNumLabel" destination="hbN-5U-dyO" id="DJ8-AV-YNG"/>
+                        <outlet property="textView" destination="RYa-wU-Q6L" id="xFo-2c-933"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jl3-QN-LQf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3197" y="410"/>
+        </scene>
+        <!--Send Announcement Message View Controller-->
+        <scene sceneID="hFy-vL-MXC">
+            <objects>
+                <viewController storyboardIdentifier="ZXSendAnnouncementMessageViewController" id="SLa-uD-T1B" customClass="ZXSendAnnouncementMessageViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6fr-NN-U1D"/>
+                        <viewControllerLayoutGuide type="bottom" id="nd4-lF-qtH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="WSf-Ud-IIQ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Fd-cz-shc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3845" y="410"/>
+        </scene>
         <!--Announcement Type View Controller-->
         <scene sceneID="oNV-3N-wyk">
             <objects>
@@ -1070,6 +1183,7 @@
     <resources>
         <image name="announcement_bt_back" width="25" height="25"/>
         <image name="announcement_ic_allreading" width="60" height="60"/>
+        <image name="announcement_ic_number" width="16" height="16"/>
         <image name="announcement_ic_time" width="12" height="12"/>
         <image name="announcement_progress_track" width="116" height="13"/>
         <image name="announcement_read_green" width="16" height="14"/>
